@@ -17,7 +17,7 @@
 #include "op_file.h"
 
 #include "op_sample_file.h"
-#include "op_interface_25.h"
+#include "op_config.h"
 #include "op_cpu_type.h"
 #include "op_mangle.h"
 #include "op_events.h"
